--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,118 +31,7 @@ jobs:
         cp -r src docs/
         cp README.md docs/
         cp LICENSE docs/
-    
-    - name: Create index.html for GitHub Pages
-      run: |
-        cat > docs/index.html << 'EOF'
-        <!DOCTYPE html>
-        <html lang="en">
-        <head>
-          <meta charset="UTF-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>Mobile p5.js Permissions - Live Examples</title>
-          <style>
-            body {
-              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-              max-width: 800px;
-              margin: 0 auto;
-              padding: 20px;
-              background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-              color: white;
-              min-height: 100vh;
-            }
-            h1 { text-align: center; margin-bottom: 30px; }
-            .example-grid {
-              display: grid;
-              grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-              gap: 20px;
-              margin: 30px 0;
-            }
-            .example-card {
-              background: rgba(255, 255, 255, 0.1);
-              padding: 20px;
-              border-radius: 15px;
-              backdrop-filter: blur(10px);
-              border: 1px solid rgba(255, 255, 255, 0.2);
-              transition: transform 0.3s ease;
-            }
-            .example-card:hover {
-              transform: translateY(-5px);
-            }
-            .example-card h3 {
-              margin-top: 0;
-              color: #fff;
-            }
-            .example-card p {
-              color: rgba(255, 255, 255, 0.8);
-              line-height: 1.6;
-            }
-            .demo-button {
-              display: inline-block;
-              background: rgba(255, 255, 255, 0.2);
-              color: white;
-              padding: 12px 24px;
-              text-decoration: none;
-              border-radius: 8px;
-              border: 1px solid rgba(255, 255, 255, 0.3);
-              transition: all 0.3s ease;
-              margin-top: 10px;
-            }
-            .demo-button:hover {
-              background: rgba(255, 255, 255, 0.3);
-              transform: translateY(-2px);
-            }
-            .github-link {
-              text-align: center;
-              margin: 40px 0;
-            }
-            .github-link a {
-              color: rgba(255, 255, 255, 0.8);
-              text-decoration: none;
-            }
-            .github-link a:hover {
-              color: white;
-            }
-          </style>
-        </head>
-        <body>
-          <h1>🚀 Mobile p5.js Permissions</h1>
-          <p style="text-align: center; font-size: 18px; margin-bottom: 30px;">
-            Live interactive examples demonstrating mobile device permissions and gesture handling for p5.js
-          </p>
-          
-          <div class="example-grid">
-            <div class="example-card">
-              <h3>🎨 Basic Touch Drawing</h3>
-              <p>Simple touch-based drawing app with gesture blocking. No device permissions required - perfect for basic interactive projects.</p>
-              <a href="examples/basic-touch/" class="demo-button">Try Demo</a>
-            </div>
-            
-            <div class="example-card">
-              <h3>📱 Gyroscope Tilt Game</h3>
-              <p>Tilt-controlled ball game using device motion sensors. Demonstrates gyroscope and accelerometer input for tilt-based interactions.</p>
-              <a href="examples/gyroscope-demo/" class="demo-button">Try Demo</a>
-            </div>
-            
-            <div class="example-card">
-              <h3>🎵 Sound Visualizer</h3>
-              <p>Audio-reactive visual effects using microphone input. Real-time sound visualization with particle systems and waveforms.</p>
-              <a href="examples/microphone-demo/" class="demo-button">Try Demo</a>
-            </div>
-            
-            <div class="example-card">
-              <h3>🌟 Full Sensor Demo</h3>
-              <p>Complete example using all available inputs: touch, motion sensors, and microphone. The ultimate mobile p5.js experience.</p>
-              <a href="examples/full-sensors/" class="demo-button">Try Demo</a>
-            </div>
-          </div>
-          
-          <div class="github-link">
-            <p><a href="https://github.com/DigitalFuturesOCADU/mobile-p5-permissions">📖 View Documentation & Source Code on GitHub</a></p>
-          </div>
-        </body>
-        </html>
-        EOF
+        cp index.html docs/
     
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
