feat: Add p5.js namespace support and minified distribution
- Add p5.prototype support for all library functions
- Create dist/ folder with minified and unminified versions
- Add proper library header with version and copyright info
- Update package.json with build script and dist/ files
- Update README with new CDN links and namespace documentation
- Update YAML file to use minified version for better performance

Files added:
- dist/p5.mobile-permissions.js (standard p5.js naming)
- dist/p5.mobile-permissions.min.js (production minified version)

Breaking changes: None (fully backwards compatible)
New features: p5.prototype.functionName() syntax support

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "src/permissionsAll.js",
   "files": [
     "src/",
+    "dist/",
     "examples/",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
+    "build": "npx terser src/permissionsAll.js --compress --mangle --output dist/p5.mobile-permissions.min.js && cp src/permissionsAll.js dist/p5.mobile-permissions.js",
     "test": "echo \"No tests specified\" && exit 0",
     "prepublishOnly": "npm test",
     "prepare": "echo \"Package prepared for publishing\"",
@@ -51,7 +53,9 @@
   "peerDependencies": {
     "p5": "^1.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "terser": "^5.44.0"
+  },
   "engines": {
     "node": ">=12.0.0"
   },
